--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  flutter_svg: ^0.19.3
+  flutter_svg: ^0.21.0+1
 
 dev_dependencies:
   flutter_test:
